--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <table>
     <tr><td height="50"></td></tr>
     <tr bgcolor=lightgray> 
-      <th> <img src="img.JPG" width=400 height=400 vspace=5 hspace=5> </th>
+      <th> <img src="Economy.JPG" width=400 height=400 vspace=5 hspace=5> </th>
     </tr>
   </table>
   
@@ -21,7 +21,7 @@
     </tr>
     <tr>
       <th>
-        <audio controls autoplay>  <source src="sound.mp3" type="audio/mp3"  > </audio>
+        <audio controls autoplay>  <source src="20516.mp3" type="audio/mp3"  > </audio>
       </th>
     </tr>
   </table>
