--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <table>
     <tr><td height="50"></td></tr>
     <tr bgcolor=lightgray> 
-      <th> <img src="Economy.JPG" width=400 height=400 vspace=5 hspace=5> </th>
+      <th> <img src="Economy.jpg" width=400 height=400 vspace=5 hspace=5> </th>
     </tr>
   </table>
   
