--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title> 학생 법정전염병 분석 </title>
+<title> 대한민국 경제성장률 분석 </title>
 </head>
 <body>
 <center>
@@ -14,10 +14,10 @@
   
   <table cellpadding="10">
     <tr >
-      <th > <font size=20> 학생 법정감염병현황 분석 </font> </th>
+      <th > <font size=20> 대한민국 경제성장률 분석 </font> </th>
     </tr>
     <tr>
-      <th> <font size=14> 양운고 2학년 이00 </font> </th>
+      <th> <font size=14> 20516 박범진 </font> </th>
     </tr>
     <tr>
       <th>
